// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board renders board in gameOver mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="max-w-sm mx-auto my-4 bg-white rounded-lg p-4"
      >
        <div
          class="mb-4"
        >
          <div
            class="grid grid-cols-2"
          >
            <div
              class="overflow-hidden"
            >
              <div
                class=""
                data-testid="transition-wrap"
              >
                <div
                  class="uppercase"
                >
                  <b>
                    Your turn
                  </b>
                </div>
              </div>
            </div>
            <div
              class="overflow-hidden"
            />
          </div>
        </div>
        <div
          class="grid grid-cols-3"
        >
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-1"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-1"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
            id="cell-2"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-2"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-3"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-3"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
            id="cell-4"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-4"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-2  "
            id="cell-5"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-5"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
            id="cell-6"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-6"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-7"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-7"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
            id="cell-8"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-8"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-9"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-9"
              disabled=""
            >
               
            </button>
          </div>
        </div>
        <div
          class="text-right mt-4"
        >
          Wins: 
          10
          , Losses: 
          5
          , Draws: 
          0
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="max-w-sm mx-auto my-4 bg-white rounded-lg p-4"
    >
      <div
        class="mb-4"
      >
        <div
          class="grid grid-cols-2"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class=""
              data-testid="transition-wrap"
            >
              <div
                class="uppercase"
              >
                <b>
                  Your turn
                </b>
              </div>
            </div>
          </div>
          <div
            class="overflow-hidden"
          />
        </div>
      </div>
      <div
        class="grid grid-cols-3"
      >
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-1"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-1"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
          id="cell-2"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-2"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-3"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-3"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
          id="cell-4"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-4"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-2  "
          id="cell-5"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-5"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
          id="cell-6"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-6"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-7"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-7"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
          id="cell-8"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-8"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-9"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-9"
            disabled=""
          >
             
          </button>
        </div>
      </div>
      <div
        class="text-right mt-4"
      >
        Wins: 
        10
        , Losses: 
        5
        , Draws: 
        0
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Board renders board in playing mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="max-w-sm mx-auto my-4 bg-white rounded-lg p-4"
      >
        <div
          class="mb-4"
        >
          <div
            class="grid grid-cols-2"
          >
            <div
              class="overflow-hidden"
            >
              <div
                class=""
                data-testid="transition-wrap"
              >
                <div
                  class="uppercase"
                >
                  <b>
                    Your turn
                  </b>
                </div>
              </div>
            </div>
            <div
              class="overflow-hidden"
            />
          </div>
        </div>
        <div
          class="grid grid-cols-3"
        >
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-1"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-1"
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
            id="cell-2"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-2"
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-3"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-3"
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
            id="cell-4"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-4"
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-2  "
            id="cell-5"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-5"
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
            id="cell-6"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-6"
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-7"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-7"
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
            id="cell-8"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-8"
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-9"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-9"
            >
               
            </button>
          </div>
        </div>
        <div
          class="text-right mt-4"
        >
          Wins: 
          10
          , Losses: 
          5
          , Draws: 
          0
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="max-w-sm mx-auto my-4 bg-white rounded-lg p-4"
    >
      <div
        class="mb-4"
      >
        <div
          class="grid grid-cols-2"
        >
          <div
            class="overflow-hidden"
          >
            <div
              class=""
              data-testid="transition-wrap"
            >
              <div
                class="uppercase"
              >
                <b>
                  Your turn
                </b>
              </div>
            </div>
          </div>
          <div
            class="overflow-hidden"
          />
        </div>
      </div>
      <div
        class="grid grid-cols-3"
      >
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-1"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-1"
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
          id="cell-2"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-2"
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-3"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-3"
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
          id="cell-4"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-4"
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-2  "
          id="cell-5"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-5"
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
          id="cell-6"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-6"
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-7"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-7"
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
          id="cell-8"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-8"
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-9"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-9"
          >
             
          </button>
        </div>
      </div>
      <div
        class="text-right mt-4"
      >
        Wins: 
        10
        , Losses: 
        5
        , Draws: 
        0
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Board renders board with no one's turn 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="max-w-sm mx-auto my-4 bg-white rounded-lg p-4"
      >
        <div
          class="mb-4"
        >
          <div
            class="grid grid-cols-2"
          >
            <div
              class="overflow-hidden"
            >
              <div>
                  
              </div>
            </div>
            <div
              class="overflow-hidden"
            />
          </div>
        </div>
        <div
          class="grid grid-cols-3"
        >
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-1"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-1"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
            id="cell-2"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-2"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-3"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-3"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
            id="cell-4"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-4"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-2  "
            id="cell-5"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-5"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
            id="cell-6"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-6"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-7"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-7"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
            id="cell-8"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-8"
              disabled=""
            >
               
            </button>
          </div>
          <div
            class="text-center border-gray-500 h-32   "
            id="cell-9"
          >
            <button
              class="w-full h-full"
              data-testid="cell-btn-9"
              disabled=""
            >
               
            </button>
          </div>
        </div>
        <div
          class="text-right mt-4"
        >
          Wins: 
          10
          , Losses: 
          5
          , Draws: 
          0
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="max-w-sm mx-auto my-4 bg-white rounded-lg p-4"
    >
      <div
        class="mb-4"
      >
        <div
          class="grid grid-cols-2"
        >
          <div
            class="overflow-hidden"
          >
            <div>
                
            </div>
          </div>
          <div
            class="overflow-hidden"
          />
        </div>
      </div>
      <div
        class="grid grid-cols-3"
      >
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-1"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-1"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
          id="cell-2"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-2"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-3"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-3"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
          id="cell-4"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-4"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-2  "
          id="cell-5"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-5"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-t-2 border-b-2  "
          id="cell-6"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-6"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-7"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-7"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32 border-l-2 border-r-2  "
          id="cell-8"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-8"
            disabled=""
          >
             
          </button>
        </div>
        <div
          class="text-center border-gray-500 h-32   "
          id="cell-9"
        >
          <button
            class="w-full h-full"
            data-testid="cell-btn-9"
            disabled=""
          >
             
          </button>
        </div>
      </div>
      <div
        class="text-right mt-4"
      >
        Wins: 
        10
        , Losses: 
        5
        , Draws: 
        0
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
